[metadata]
name = envirohat
version = 0.0.1
author = Jakub Bucko
author_email = bucko.jakub@proton.me
description = Enviro+ sensor in one place
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/achjaj/envirohat
project_urls =
    Bug Tracker = https://github.com/achjaj/envirohat/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    enviroplus >=0.0.6

[options.packages.find]
where = src
